syntax = "proto3";

import "backend/v1/post.proto";
import "backend/v1/profile.proto";

package frontend.v1;

service ProfilePageService {
  // Gets a user's profile page.
  rpc GetProfilePage(GetProfilePageRequest) returns (GetProfilePageResponse);
}

// The user's profile page.
message GetProfilePageResponse {
  // The user's profile information.
  backend.v1.MiniProfile user_details = 1;

  // The user's posts.
  repeated backend.v1.Post posts = 2;
}

// Request for getting a user's profile page.
message GetProfilePageRequest {
  // The key of the profile to fetch
  backend.v1.ProfileKey profile = 1;
}